issue: opmtize duration params

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "email": "1290657123@qq.com"
   },
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "test": "gulp test"
   },
   "main": "dist/webkit-sassui-backdrop.scss",
   "license": "MIT",
