--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@feizheng/webkit-sassui-backdrop",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Webkit sass ui module for overlay/mask/backdrop.",
   "homepage": "https://github.com/afeiship/webkit-sassui-backdrop",
   "author": {
@@ -9,23 +9,22 @@
   },
   "scripts": {
     "build": "gulp",
-    "start": "node server.js",
-    "test": "gulp test",
-    "release": "gulp && gulp test"
+    "start": "node server.js"
   },
   "main": "dist/index.scss",
   "license": "MIT",
   "devDependencies": {
+    "@feizheng/gulp-pkg-header": "^1.0.2",
+    "@feizheng/next-global": "^1.0.2",
     "@feizheng/rake-git": "^1.2.1",
-    "autoprefixer": "^9.7.2",
+    "autoprefixer": "^9.7.4",
     "del": "^5.1.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
-    "gulp-load-plugins": "^2.0.1",
+    "gulp-load-plugins": "^2.0.2",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "prettier": "^1.19.1"
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
